// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LimitOrderPreview.tsx > matches base snapshot, test trade exact input 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] mr-[8px]"
            >
              Sell
            </span>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
            >
              &lt;0.00001 ABC
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <div
              class="inline-block h-[inherit]"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:default]"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [cursor:var(--c-c)] mr-[8px]"
                  style="--c-c: help;"
                >
                  Buy
                </span>
              </div>
            </div>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
            >
              &lt;0.00001 DEF
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LimitOrderPreview.tsx > renders ETH input token for an ETH input UniswapX swap 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] mr-[8px]"
            >
              Sell
            </span>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
            >
              &lt;0.00001 ETH
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="eth-logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <div
              class="inline-block h-[inherit]"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:default]"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [cursor:var(--c-c)] mr-[8px]"
                  style="--c-c: help;"
                >
                  Buy
                </span>
              </div>
            </div>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
            >
              &lt;0.00001 DEF
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LimitOrderPreview.tsx > renders ETH input token for an ETH input UniswapX v2 swap 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] mr-[8px]"
            >
              Sell
            </span>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
            >
              &lt;0.00001 ETH
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="eth-logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <div
              class="inline-block h-[inherit]"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:default]"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [cursor:var(--c-c)] mr-[8px]"
                  style="--c-c: help;"
                >
                  Buy
                </span>
              </div>
            </div>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
            >
              &lt;0.00001 DEF
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LimitOrderPreview.tsx > renders preview trades with loading states 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] mr-[8px]"
            >
              Sell
            </span>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
            >
              &lt;0.00001 DEF
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <div
              class="inline-block h-[inherit]"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:default]"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [cursor:var(--c-c)] mr-[8px]"
                  style="--c-c: help;"
                >
                  Buy
                </span>
              </div>
            </div>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral2)]"
              data-testid="output-amount"
            >
              &lt;0.00001 DEF
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LimitOrderPreview.tsx > test trade exact output, no recipient 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] mr-[8px]"
            >
              Sell
            </span>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
            >
              &lt;0.00001 ABC
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            <div
              class="inline-block h-[inherit]"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:default]"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [cursor:var(--c-c)] mr-[8px]"
                  style="--c-c: help;"
                >
                  Buy
                </span>
              </div>
            </div>
          </span>
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
            >
              &lt;0.00001 GHI
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
